css for banner, header, some for headline

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="banner">
 
       <!-- Header -->
-      <header class="header container">
+      <header class="container">
 
         <!-- Logo -->
         <div class="logo">
@@ -43,8 +43,8 @@
       </header>
 
       <!-- Headline Elements -->
-      <div class="headline">
-        <div class="container">
+      <div class="container">
+        <div class="headline">
           <h1>DON'T JUST LOOK, SEE.</h1>
         </div>
       </div>
@@ -74,12 +74,12 @@
       <div class="container">
         <div class="business-info">
           <div class="info">
-            <span class="title">PHILOSOPHY</span>
+            <h5 class="title">PHILOSOPHY</h5>
             <span class="description">Over 75% of our brains are dedicated to once sense: vision. We believe everyone deserves to see the world, no matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</span>
           </div>
           <div class="info">
-            <span>APPOINTMENTS</span>
-            <span>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</span>
+            <h5 class="title">APPOINTMENTS</h5>
+            <span class="description">Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</span>
           </div>
         </div>
       </div>
