css for services

--- a/index.html
+++ b/index.html
@@ -56,17 +56,26 @@
 
       <!-- Services -->
       <div class="container">
-        <div class="service exam">
-          <img src="./resources/images/paper-icon.png" alt="Exam Icon">
-          <span>Comprehensive Exams</span>
-        </div>
-        <div class="service fittings">
-          <img src="./resources/images/ruler-icon.png" alt="Ruler Icon">
-          <span>Custom Fittings</span>
-        </div>
-        <div class="service delivery">
-          <img src="./resources/images/truck-icon.png" alt="Delivery Icon">
-          <span>Fast Delivery</span>
+        <div class="services">
+          <div class="service exam">
+            <div class="img-container">
+              <img src="./resources/images/paper-icon.png" alt="Exam Icon">
+            </div>
+            <span>Comprehensive Exams</span>
+          </div>
+          <div class="service fittings">
+            <div class="img-container">
+
+              <img src="./resources/images/ruler-icon.png" alt="Ruler Icon">
+            </div>
+            <span>Custom Fittings</span>
+          </div>
+          <div class="service delivery">
+            <div class="img-container">
+              <img src="./resources/images/truck-icon.png" alt="Delivery Icon">
+            </div>
+            <span>Fast Delivery</span>
+          </div>
         </div>
       </div>
 
@@ -88,8 +97,9 @@
 
     <footer>
       <div class="container">
-        <div class="logo black">
+        <div class="logo-black">
           <img src="./resources/images/logo-black.png" alt="Black Logo">
+          <span>Copyright Toroiseshell Optics</span>
         </div>
       </div>
     </footer>
