--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="business-info">
           <div class="info">
             <h5 class="title">PHILOSOPHY</h5>
-            <span class="description">Over 75% of our brains are dedicated to once sense: vision. We believe everyone deserves to see the world, no matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</span>
+            <span class="description">Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, no matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</span>
           </div>
           <div class="info">
             <h5 class="title">APPOINTMENTS</h5>
