--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Logo -->
         <div class="logo">
           <img src="./resources/images/logo-white.png" alt="White Logo">
-          <span>Tortoiseshell Optics</span>
+          <span>Tortoiseshell Optics Test</span>
         </div>
 
         <!-- Navigation -->
